--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version:'7.0.0.jre8'
 }
